--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-browserify": "^3.12.0",
     "csvtojson": "^2.0.10",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.7",
     "dedent": "^0.7.0",
     "dotenv": "^9.0.2",
     "eslint": "^7.5.0",
