--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.2",
-    "gatsby-remark-autolink-headers": "^5.16.0",
+    "gatsby-remark-autolink-headers": "^3.2.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-emojis": "^0.4.3",
-    "gatsby-remark-mathjax-ssr": "^1.2.1",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-smartypants": "^3.0.0",
     "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^3.0.0",
@@ -77,6 +77,7 @@
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "remark-parse": "^6.0.0",
     "sass": "^1.32.12",
     "sharp": "0.28.2",
     "stream-browserify": "^3.0.0",
