Revert "Move contest.csv calls to api"

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,4 +23,4 @@
 
 [functions]
   directory = "netlify/functions/"
-  included_files = ["_data/findings/*", "_data/handles/*.json"]
+  included_files = ["_data/contests/*", "_data/findings/*", "_data/handles/*.json"]
