--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^1.1.1",
     "core-js": "^2.6.5",
     "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "csvtojson": "^2.0.10",
     "date-fns": "^2.28.0",
     "dedent": "^0.7.0",
