--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-no-sourcemaps": "^3.15.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^4.4.0",
